--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,21 +13,32 @@ body{
 }
 
 .navbar-brand{
+    margin-left: 30px;
     font-size: 36px;
     text-transform: uppercase;
 }
 
 .nav-link{
     font-size: 18px;
+    font-weight: 300;
 }
 
 /*--------------------------------------------------------Home*/
 
 .hero-image{
-    background-color: red;
-    background-image: url("assets/images/freelance-kok-kneed-deeg.png");
-    height: 250px;
+    background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.2),rgba(255,255,255,1)), url("../images/freelance-kok-kneed-deeg.png");
+    height: 300px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.hero-text{
+    text-transform: uppercase;
+    margin-top: 40px;
+    color: #ffffff;
+    font-size: 40px;
+    font-weight: 600;
+    text-align: center;
+    text-shadow: 5px 5px 5px rgba(0,0,0,0.4);
 }
