--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,15 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 /*--------------------------------------------------------header*/
 .nav-background{
     height: 80px;
 }
+
 .bg-light{
     background-image: linear-gradient(#B784A7, #78586E);
 }
@@ -23,22 +26,98 @@ body{
     font-weight: 300;
 }
 
-/*--------------------------------------------------------Home*/
+@media screen and (max-width: 540px){
+    .navbar-brand{
+        font-size: 20px;
+    }
+    .nav-background{
+    height: 35px;
+    }
+}
+
+
+
+/*--------------------------------------------------------Hero area*/
 
 .hero-image{
     background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.2),rgba(255,255,255,1)), url("../images/freelance-kok-kneed-deeg.png");
-    height: 300px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+.profile-pic{
+    position: absolute;
+    left: 60%;
+    top: -30px;
+    z-index: -1;
+    background-image:url("../images/freelance-kok-kim.png");
+    border: 1px solid #000;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .hero-text{
+    position: relative;
+    z-index: 100;
+    padding: 0;
     text-transform: uppercase;
     margin-top: 40px;
     color: #ffffff;
-    font-size: 40px;
     font-weight: 600;
     text-align: center;
     text-shadow: 5px 5px 5px rgba(0,0,0,0.4);
 }
+
+
+@media screen and (min-width: 320px){
+    .profile-pic{
+    width: 100px;
+    height: 100px;
+    top: -15px;
+    }
+    .hero-text{
+    font-size: 20px;
+     }
+    .hero-image{
+        height: 200px;
+    }
+}
+
+@media screen and (min-width: 720px){
+    .profile-pic{
+    width: 200px;
+    height: 200px;
+    }
+    .hero-text{
+    font-size: 30px;
+    }
+    .hero-image{
+    height: 250px;
+    }
+}
+
+@media screen and (min-width: 992px){
+    .profile-pic{
+    width: 260px;
+    height: 260px;
+    }
+    .hero-text{
+    font-size: 40px;
+    }
+    .hero-image{
+        height: 300px;
+    }
+}
+
+/*--------------------------------------------------------Home*/
+
+
+/*--------------------------------------------------------Footer*/
+.footer-background{
+    height: 60px;
+    background-image: linear-gradient(rgba(183, 132, 167, 0),rgba(183, 132, 167, 1), rgba(120, 88, 110, 1));
+}
+
+
