--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,17 +26,6 @@ body{
     font-weight: 300;
 }
 
-@media screen and (max-width: 540px){
-    .navbar-brand{
-        font-size: 20px;
-    }
-    .nav-background{
-    height: 35px;
-    }
-}
-
-
-
 /*--------------------------------------------------------Hero area*/
 
 .hero-image{
@@ -49,8 +38,8 @@ body{
 .profile-pic{
     position: absolute;
     left: 60%;
-    top: -30px;
-    z-index: -1;
+    top: 20px;
+    z-index: 2;
     background-image:url("../images/freelance-kok-kim.png");
     border: 1px solid #000;
     border-radius: 50%;
@@ -70,18 +59,65 @@ body{
     text-shadow: 5px 5px 5px rgba(0,0,0,0.4);
 }
 
+/*--------------------------------------------------------Home*/
+
+
+/*--------------------------------------------------------Footer*/
+.footer-background{
+    height: 60px;
+    background-image: linear-gradient(rgba(183, 132, 167, 0),rgba(183, 132, 167, 1), rgba(120, 88, 110, 1));
+}
+
+.social-links{
+    padding: 15px 20px 10px 5px;
+}
+
+.copyright{
+    padding: 20px 5px 10px 40px;
+}
+
+.social-links li a i {
+  width: 32px;
+  height: 32px;
+  padding: 12px 0;
+  font-size: 15px;
+  color: #fafafa;
+  border-radius: 50%;
+  background: #8f8f8f;
+  text-align: center;
+  line-height: 7px;
+  -o-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  margin-right: 10px;
+}
+
+.social-links li a i:hover {
+  background: #858ed6;
+}
+
+.social-links li a .youtube-logo:hover {
+  background: #d84e17;
+}
+
+.social-links li a .facebook-logo:hover {
+  background: #2441c0;
+}
+
+/*--------------------------------------------------------Home*/
 
 @media screen and (min-width: 320px){
     .profile-pic{
     width: 100px;
     height: 100px;
-    top: -15px;
+    top: 40px;
     }
     .hero-text{
     font-size: 20px;
      }
     .hero-image{
-        height: 200px;
+    height: 200px;
     }
 }
 
@@ -98,6 +134,15 @@ body{
     }
 }
 
+@media screen and (max-width: 540px){
+    .navbar-brand{
+    font-size: 20px;
+    }
+    .nav-background{
+    height: 35px;
+    }
+}
+
 @media screen and (min-width: 992px){
     .profile-pic{
     width: 260px;
@@ -107,17 +152,6 @@ body{
     font-size: 40px;
     }
     .hero-image{
-        height: 300px;
+    height: 300px;
     }
 }
-
-/*--------------------------------------------------------Home*/
-
-
-/*--------------------------------------------------------Footer*/
-.footer-background{
-    height: 60px;
-    background-image: linear-gradient(rgba(183, 132, 167, 0),rgba(183, 132, 167, 1), rgba(120, 88, 110, 1));
-}
-
-
