--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,33 +96,46 @@ body{
     padding: 15px 20px 10px 5px;
 }
 
-.copyright{
-    margin-top: 10px;
-    font-size: 12px;
-    color: #4b5582;
-    padding: 20px 5px 10px 40px;
-}
-
 .social-links li a i {
-  width: 32px;
-  height: 32px;
-  padding: 12px 0;
-  font-size: 15px;
-  color: #fafafa;
-  border-radius: 50%;
-  background: #8f8f8f;
-  text-align: center;
-  line-height: 7px;
-  -o-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  margin-right: 10px;
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    font-size: 15px;
+    color: #fafafa;
+    border-radius: 50%;
+    background: #8f8f8f;
+    text-align: center;
+    line-height: 7px;
+    -o-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    margin-right: 10px;
 }
 
 .social-links li a i:hover {
   background: #4b5582;
   box-shadow: 2px 2px 5px 3px rgba(129, 75, 112, 0.6);
+}
+
+.copyright{
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.copyright a{
+    font-size: 12px;
+    color: #4b5582;
+    -o-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.copyright a:hover{
+    text-decoration: none;
+    color: #4b5582;
+    text-shadow: 8px 8px 4px rgba(129, 75, 112, 1);
 }
 
 /*--------------------------------------------------------Home*/
@@ -138,6 +151,9 @@ body{
      }
     .hero-image{
     height: 200px;
+    }
+    .social-links{
+    padding: 15px 0px 10px 5px;
     }
 }
 
@@ -155,7 +171,7 @@ body{
 }
 
 @media screen and (max-width: 540px){
-    .navbar-brand{
+    .navbar-brand h1{
     font-size: 20px;
     }
     .nav-background{
