--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,9 @@ body a:hover{
     border-radius: 5px;
     padding: 10px 20px;
     text-align: center;
+    color: #000000;
+    font-size: 20px;
+    font-weight: 600;
     cursor: pointer;
     box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
     -o-transition: all 0.3s ease-in-out;
@@ -103,17 +106,53 @@ body a:hover{
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
-
-.contact-button{
-    color: #000000;
-    font-size: 20px;
-    font-weight: 600;
+.call-to-action{
+    top: -20px;
+    margin-bottom: 60px;
+    text-align: center;
 }
 
 .contact-button:hover{
     background-color: rgba(183, 132, 167, 0.8);
     color: #000000;
 }
+
+.referentie{
+    border: 1px solid #000;
+    box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 60px;
+}
+
+.referentie-logo-1{
+    width: 40px;
+    height: 40px;
+    background-image: url("../images/ccb-logo.png");
+    border: 1px solid #000;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 20px;
+}
+
+.referentie-logo-2{
+    width: 40px;
+    height: 40px;
+    background-image: url("../images/jeroen-goossens.jpg");
+    border: 1px solid #000;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 20px;
+}
+
+.referentie-titel{
+    font-size: 20px;
+    margin-top: 20px;
+    padding-left: 0px;
+}
+
+.referentie-text{
+    margin-top: 20px;
+}
+
 
 /*--------------------------------------------------------Footer*/
 .footer-background{
@@ -167,7 +206,7 @@ body a:hover{
     text-shadow: 8px 8px 4px rgba(129, 75, 112, 1);
 }
 
-/*--------------------------------------------------------Home*/
+/*--------------------------------------------------------media queries*/
 
 @media screen and (min-width: 320px){
     .profile-pic{
@@ -183,6 +222,9 @@ body a:hover{
     }
     .social-links{
     padding: 15px 5px 10px 5px;
+    }
+    .referentie-titel{
+    padding-left: 20px;
     }
 }
 
