--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,18 @@ body a:hover{
 }
 
 
+.background-deco{
+    position: absolute;
+    top: -350px;
+    left: 10px;
+    width: 500px;
+    height: 600px;
+    background-image: url("../images/framboos-transparant.png");
+    opacity: 0.2;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
 /*--------------------------------------------------------Footer*/
 .footer-background{
     height: 60px;
