--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,29 @@ body a:hover{
     background-repeat: no-repeat;
 }
 
+/*--------------------------------------------------------main-content-Over-Kim*/
+
+.text-block-over-kim{
+    background-color: #ffffff;
+    z-index: 100;
+    border: 1px solid #000;
+    box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 60px;
+    margin-bottom: 100px;
+}
+
+.butterfly-background{
+    position: absolute;
+    background-image: url(../images/transparant-vlinder-dessert.png);
+    z-index: 10;
+    top: 650px;
+    width: 600px;
+    height: 600px;
+    opacity: 0.5;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
 /*--------------------------------------------------------Footer*/
 .footer-background{
     height: 60px;
@@ -243,6 +266,10 @@ body a:hover{
     .referentie-titel{
     padding-left: 20px;
     }
+    .butterfly-background{
+    width: 0px;
+    height: 0px;
+    }
 }
 
 @media screen and (min-width: 720px){
@@ -263,6 +290,11 @@ body a:hover{
     }
     .social-links{
     padding: 15px 20px 10px 5px;
+    }
+    .butterfly-background{
+    width: 400px;
+    height: 400px;
+    left: -150;
     }
 }
 
