--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,45 @@ body a:hover{
     background-repeat: no-repeat;
 }
 
+/*--------------------------------------------------------main-content-recipes*/
+
+.recipe-pic{
+    position: relative;
+    top: 45px;
+    left: 20px;
+    width: 200px;
+    height: 200px;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.bombes{
+    background-image: url(../images/choco-bombes.png);
+}
+
+.recipe-title{
+    text-align: center;
+}
+
+.ingredient-list ul li{
+    border: none;
+    margin: 15px 20px 15px 50px;
+    padding: none;
+}
+
+.ingredients h3{
+    padding: 15px;
+}
+
+.recipe-section{
+    background-color: #ffffff;
+    z-index: 100;
+    border: 1px solid #000;
+    box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 60px;
+    margin-bottom: 100px;
+}
+
 /*--------------------------------------------------------Footer*/
 .footer-background{
     height: 60px;
@@ -270,6 +309,14 @@ body a:hover{
     width: 0px;
     height: 0px;
     }
+    .recipe-pic{
+    position: relative;
+    top: -10px;
+    width: 300px;
+    height: 100px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
 }
 
 @media screen and (min-width: 720px){
@@ -296,6 +343,13 @@ body a:hover{
     height: 400px;
     left: -150;
     }
+    .recipe-pic{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    }
 }
 
 @media screen and (max-width: 540px){
@@ -317,5 +371,12 @@ body a:hover{
     }
     .hero-image{
     height: 300px;
+    }
+    .recipe-pic{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    background-size: contain;
+    background-repeat: no-repeat;
     }
 }
