--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,6 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
-    padding: 0;
-    margin: 0;
 }
 
 body a:hover{
@@ -190,41 +188,39 @@ body a:hover{
 
 /*--------------------------------------------------------main-content-recipes*/
 
-.recipe-pic{
-    position: relative;
-    top: 45px;
-    left: 20px;
-    width: 200px;
-    height: 200px;
-    background-size: contain;
-    background-repeat: no-repeat;
+.recipe-section{
+    background-color: #ffffff;
+    z-index: 100;
+    border: 1px solid #000;
+    box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
+    margin: 60px 0px 80px 0px;
+}
+
+.recipe-title{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .bombes{
     background-image: url(../images/choco-bombes.png);
 }
 
-.recipe-title{
-    text-align: center;
+.list-group-item {
+    border: none;
+    padding: 0px;
 }
 
-.ingredient-list ul li{
-    border: none;
-    margin: 15px 20px 15px 50px;
-    padding: none;
+.list-group{
+    margin-bottom: 15px;
 }
 
 .ingredients h3{
-    padding: 15px;
+    padding: 0px 15px 15px 15px;
 }
 
-.recipe-section{
-    background-color: #ffffff;
-    z-index: 100;
-    border: 1px solid #000;
-    box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 60px;
-    margin-bottom: 100px;
+.bereiding-text{
+    margin-bottom: 20px;
 }
 
 /*--------------------------------------------------------Footer*/
@@ -341,7 +337,7 @@ body a:hover{
     .butterfly-background{
     width: 400px;
     height: 400px;
-    left: -150;
+    left: -50px;
     }
     .recipe-pic{
     position: relative;
