--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,23 +119,26 @@ body a:hover{
     border: 1px solid #000;
     box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 60px;
+    border-radius: 4px;
 }
 
 .referentie-logo-1{
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background-image: url("../images/ccb-logo.png");
     border: 1px solid #000;
+    border-radius: 4px;
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 20px;
 }
 
 .referentie-logo-2{
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background-image: url("../images/jeroen-goossens.jpg");
     border: 1px solid #000;
+    border-radius: 4px;
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 20px;
@@ -166,11 +169,13 @@ body a:hover{
 /*--------------------------------------------------------main-content-Over-Kim*/
 
 .text-block-over-kim{
+    padding: 20px;
     background-color: #ffffff;
     z-index: 100;
     border: 1px solid #000;
+    border-radius: 4px;
     box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 60px;
+    margin-top: 10px;
     margin-bottom: 100px;
 }
 
@@ -187,13 +192,23 @@ body a:hover{
 }
 
 /*--------------------------------------------------------main-content-recipes*/
+.recepe-text{
+    margin-top: 40px;
+    text-align: center;
+}
+
+.recepe-text h1{
+    font-size: 25px;
+    margin-bottom: 20px;
+}
 
 .recipe-section{
     background-color: #ffffff;
     z-index: 100;
     border: 1px solid #000;
+    border-radius: 4px;
     box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
-    margin: 60px 0px 80px 0px;
+    margin-top: 60px;
 }
 
 .recipe-title{
@@ -281,7 +296,7 @@ body a:hover{
     }
     .hero-text{
     font-size: 20px;
-     }
+    }
     .hero-image{
     height: 200px;
     }
@@ -310,7 +325,7 @@ body a:hover{
     background-repeat: no-repeat;
     }
     .recipe-section{
-        margin: 60px 0px 0px 0px;
+    margin-top: 20px;
     }
 }
 
@@ -336,7 +351,7 @@ body a:hover{
     .butterfly-background{
     width: 400px;
     height: 400px;
-    left: -50px;
+    left: -100px;
     }
     .recipe-pic{
     position: relative;
@@ -346,7 +361,14 @@ body a:hover{
     background-repeat: no-repeat;
     }
     .recipe-section{
-        margin: 60px 0px 20px 0px;
+    margin: 60px 0px 20px 0px;
+    }
+    .referentie-logo-1,.referentie-logo-2{
+    width: 70px;
+    height: 70px;
+    }
+    .text-block-over-kim{
+    margin-top: 40px;
     }
 }
 
@@ -376,5 +398,26 @@ body a:hover{
     height: 200px;
     background-size: contain;
     background-repeat: no-repeat;
+    }
+    .referentie-logo-1,.referentie-logo-2{
+        width: 80px;
+        height: 80px;
+    }
+    .text-block-over-kim{
+        margin-top: 70px;
+    }
+}
+
+@media screen and (min-width: 1366px){
+    .butterfly-background{
+    width: 600px;
+    height: 600px;
+    left: -150px;
+    }
+    .text-block-over-kim{
+    padding: 40px;
+    }
+    .text-block-over-kim p{
+    font-size: 18px;
     }
 }
