--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,14 +115,14 @@ body a:hover{
     color: #000000;
 }
 
-.referentie{
+.reference{
     border: 1px solid #000;
     box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 60px;
     border-radius: 4px;
 }
 
-.referentie-logo-1{
+.reference-logo-1{
     width: 50px;
     height: 50px;
     background-image: url("../images/ccb-logo.png");
@@ -133,7 +133,7 @@ body a:hover{
     margin-top: 20px;
 }
 
-.referentie-logo-2{
+.reference-logo-2{
     width: 50px;
     height: 50px;
     background-image: url("../images/jeroen-goossens.jpg");
@@ -144,13 +144,13 @@ body a:hover{
     margin-top: 20px;
 }
 
-.referentie-titel{
+.reference-titel h1{
     font-size: 20px;
     margin-top: 20px;
     padding-left: 0px;
 }
 
-.referentie-text{
+.reference-text{
     margin-top: 20px;
 }
 
@@ -321,7 +321,7 @@ body a:hover{
     .social-links{
     padding: 15px 5px 10px 5px;
     }
-    .referentie-titel{
+    .reference-titel{
     padding-left: 20px;
     }
     .butterfly-background{
@@ -375,7 +375,7 @@ body a:hover{
     .recipe-section{
     margin: 60px 0px 20px 0px;
     }
-    .referentie-logo-1,.referentie-logo-2{
+    .reference-logo-1,.reference-logo-2{
     width: 70px;
     height: 70px;
     }
@@ -391,6 +391,7 @@ body a:hover{
         background-size: cover;
         box-shadow: 10px 10px 14px 8px rgba(0, 0, 0, 0.4);
     }
+    
 }
 
 @media screen and (max-width: 540px){
@@ -420,7 +421,7 @@ body a:hover{
     background-size: contain;
     background-repeat: no-repeat;
     }
-    .referentie-logo-1,.referentie-logo-2{
+    .reference-logo-1,.reference-logo-2{
         width: 80px;
         height: 80px;
     }
