--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,9 +63,9 @@ body a:hover{
 
 .profile-pic{
     position: absolute;
-    left: 60%;
+    left: 70%;
     top: 20px;
-    z-index: 2;
+    z-index: 10;
     background-image:url("../images/freelance-kok-kim.png");
     border: 1px solid #000;
     border-radius: 50%;
@@ -89,6 +89,8 @@ body a:hover{
 /*--------------------------------------------------------main-content-Home*/
 
 .contact-button{
+    z-index: 100;
+    background-color:#ffffff;
     width: 150px;
     height: 50px;
     border: 1px solid #000000;
@@ -105,15 +107,20 @@ body a:hover{
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
+
 .call-to-action{
-    top: -20px;
-    margin-bottom: 60px;
+    top: -30px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
 .contact-button:hover{
     background-color: rgba(183, 132, 167, 0.8);
     color: #000000;
+}
+
+.welcome-text{
+    padding-bottom: 20px;
 }
 
 .reference{
@@ -248,13 +255,13 @@ body a:hover{
     font-weight: 500;
 }
 
-.profile-pic-small{
+.profile-pic-contact{
     width: 0px;
     height: 0px;
     position: absolute;
-    left: 80vw;
-    top: 120px;
-    z-index: 2;
+    left: 68vw;
+    top: 180px;
+    z-index: 10;
     background-image:url("../images/freelance-kok-kim.png");
 }
 
@@ -319,7 +326,12 @@ body a:hover{
 
 .social-contact{
     margin-bottom: 30px;
-    padding: 15px 20px 10px 5px;
+    padding: 15px 10px;
+}
+
+.social-contact li{
+    width: 50px;
+    margin: 0px 30px;
 }
 
 .social-contact li a i {
@@ -409,39 +421,37 @@ body a:hover{
 
 @media screen and (min-width: 320px){
     .profile-pic{
-    width: 100px;
-    height: 100px;
-    top: 40px;
-    }
+        width: 0px;
+        height: 0px;
+        }
     .hero-text{
-    font-size: 20px;
+        font-size: 20px;
     }
     .hero-image{
-    height: 200px;
+        height: 200px;
     }
     .background-deco{
-    width: 300px;
-    height: 300px;
-    top: -250px;
-    left: -50px;
+        width: 300px;
+        height: 300px;
+        top: -250px;
+        left: -50px;
     }
     .social-links{
-    padding: 15px 5px 10px 5px;
+        padding: 15px 5px 10px 5px;
     }
     .reference-titel{
-    padding-left: 20px;
+        padding-left: 20px;
     }
-    
     .recipe-pic{
-    position: relative;
-    top: -10px;
-    width: 300px;
-    height: 100px;
-    background-size: cover;
-    background-repeat: no-repeat;
+        position: relative;
+        top: -10px;
+        width: 300px;
+        height: 100px;
+        background-size: cover;
+        background-repeat: no-repeat;
     }
     .recipe-section{
-    margin-top: 20px;
+        margin-top: 20px;
     }
 }
 
@@ -449,46 +459,46 @@ body a:hover{
 
 @media screen and (min-width: 720px){
     .profile-pic{
-    width: 200px;
-    height: 200px;
+        width: 200px;
+        height: 200px;
     }
     .hero-text{
-    font-size: 30px;
+        font-size: 30px;
     }
     .hero-image{
-    height: 250px;
+        height: 250px;
     }
     .background-deco{
-    top: -300px;
-    width: 500px;
-    height: 600px; 
+        top: -300px;
+        width: 500px;
+        height: 600px; 
     }
     .social-links{
-    padding: 15px 20px 10px 5px;
+        padding: 15px 20px 10px 5px;
     }
     .butterfly-background{
-    width: 400px;
-    height: 400px;
-    left: -100px;
+        width: 400px;
+        height: 400px;
+        left: -100px;
     }
     .recipe-pic{
-    position: relative;
-    width: 300px;
-    height: 300px;
-    background-size: contain;
-    background-repeat: no-repeat;
+        position: relative;
+        width: 300px;
+        height: 300px;
+        background-size: contain;
+        background-repeat: no-repeat;
     }
     .recipe-section{
-    margin: 60px 0px 20px 0px;
+        margin: 60px 0px 20px 0px;
     }
     .reference-logo-1,.reference-logo-2{
-    width: 70px;
-    height: 70px;
+        width: 70px;
+        height: 70px;
     }
     .text-block-over-kim{
-    margin-top: 40px;
+        margin-top: 40px;
     }
-    .profile-pic-small{
+    .profile-pic-contact{
         width: 150px;
         height: 150px;
         border: 1px solid #000;
@@ -507,10 +517,10 @@ body a:hover{
 
 @media screen and (max-width: 540px){
     .navbar-brand h1{
-    font-size: 20px;
+        font-size: 20px;
     }
     .nav-background{
-    height: 35px;
+        height: 35px;
     }
 }
 
@@ -518,21 +528,25 @@ body a:hover{
 
 @media screen and (min-width: 992px){
     .profile-pic{
-    width: 260px;
-    height: 260px;
+        width: 260px;
+        height: 260px;
     }
     .hero-text{
-    font-size: 40px;
+        font-size: 40px;
     }
     .hero-image{
-    height: 300px;
+        height: 300px;
+    }
+    .call-to-action{
+        top: -50px;
+        margin-bottom: 20px;
     }
     .recipe-pic{
-    position: relative;
-    width: 200px;
-    height: 200px;
-    background-size: contain;
-    background-repeat: no-repeat;
+        position: relative;
+        width: 200px;
+        height: 200px;
+        background-size: contain;
+        background-repeat: no-repeat;
     }
     .reference-logo-1,.reference-logo-2{
         width: 80px;
@@ -559,14 +573,14 @@ body a:hover{
 
 @media screen and (min-width: 1366px){
     .butterfly-background{
-    width: 600px;
-    height: 600px;
-    left: -150px;
+        width: 600px;
+        height: 600px;
+        left: -150px;
     }
     .text-block-over-kim{
-    padding: 40px;
+        padding: 40px;
     }
     .text-block-over-kim p{
-    font-size: 18px;
+        font-size: 18px;
     }
 }
